--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,1 +1,7 @@
-<p>pokedex works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col col-3" *ngFor="let pkmn of listaPkmn" >
+            {{pkmn.name | titlecase}}
+        </div>
+    </div>
+</div>
