--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
         <div class="col col-3 p-2" *ngFor="let pkmn of listaPkmn" >
-            <div  class="text-center p-2 border border-dark">
+            <div  class="text-center p-2" [ngClass]="creoClase(pkmn.types[0].type.name, pkmn.types[1])">
                 <div>
-                    <img style="height: 250px;" class="w-100" src="{{pkmn.sprites.other.dream_world.front_default}}" >
+                    <img style="height: 250px;" class="w-100" src="{{pkmn.sprites.other.dream_world.front_default}}" [routerLink]="['/pokemon/', pkmn.id]">
                 </div>
                 <strong>
                     {{pkmn.name | titlecase}}
