--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,1 +1,22 @@
-<p>pokedex works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col col-3 p-2" *ngFor="let pkmn of listaPkmn" >
+            <div  class="text-center p-2" [ngClass]="creoClase(pkmn.types[0].type.name, pkmn.types[1])">
+                <div>
+                    <img style="height: 240px;" class="w-100" src="{{pkmn.sprites.other.dream_world.front_default}}" [routerLink]="['/pokemon/', pkmn.id]">
+                </div>
+                <strong>
+                    {{pkmn.name | titlecase}}
+                </strong>
+            </div>
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col col-2"><button [disabled]="page==1" class="btn form-control btn-primary" (click)="atras()">Atrás</button></div>
+        <div class="col col-2"></div>
+        <div class="col col-2"></div>
+        <div class="col col-2"></div>
+        <div class="col col-2"></div>
+        <div class="col col-2"><button class="btn form-control btn-primary" (click)="adelante()">Adelante</button></div>
+    </div>
+</div>
