--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,1 +1,142 @@
-<p>pokemon works!</p>
+<div class="container-fluid" style="font-size: 24px;">
+    <!--              -->
+    <!-- Basic Info   -->
+    <!--              -->
+    <div class="row">
+        <div class="col col-3 mt-2">
+            <div class="p-2">
+                <div class="mt-1 d-flex justify-content-center">
+                    <img style="height: 350px;" class="p-3" src="{{pkmn.sprites.other.dream_world.front_default}}"
+                        [routerLink]="['/pokemon/', pkmn.id]"
+                        [ngClass]="creoClase(pkmn.types[0].type.name, pkmn.types[1])">
+                </div>
+            </div>
+        </div>
+        <div class="col col-9 my-5">
+            <div class="col col-12">
+                <div>
+                    <b>
+                        <h2 class="display-5">{{pkmn.name | titlecase}}</h2>
+                    </b>
+                </div>
+            </div>
+            <div class="col col-12 mt-5">
+                <div class="row">
+                    <div class="col col-12" >
+                        Tipos
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-4 text-center p-2">
+                        <div class="rounded" [ngClass]="creoClaseTipo(pkmn.types[0].type.name)" >
+                            {{pkmn.types[0].type.name | titlecase }}
+                        </div>
+                    </div>
+                    <div *ngIf="pkmn.types[1] != undefined " class="col col-4 text-center p-2">
+                        <div class="rounded" [ngClass]="creoClaseTipo(pkmn.types[1].type.name)" >
+                            {{pkmn.types[1].type.name | titlecase }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-12 mt-3">
+                <div class="row">
+                    <div class="col col-12" >
+                        Habilidades
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-4 text-center" >
+                        <div class="border rounded">
+                            {{pkmn.abilities[0].ability.name | titlecase }}
+                        </div>
+                    </div>
+                    <div *ngIf="pkmn.abilities[1] != undefined " class="col col-4 text-center" >
+                        <div class="border rounded">
+                            {{pkmn.abilities[1].ability.name | titlecase }}
+                        </div>
+                    </div>
+                    <div *ngIf="pkmn.abilities[2] != undefined " class="col col-4 text-center" >
+                        <div class="border rounded">
+                            {{pkmn.abilities[2].ability.name | titlecase }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--              -->
+    <!-- ESTADISTICAS -->
+    <!--              -->
+    <div class="row">
+        <div class="col col-1"></div>
+        <div class="col col-10 p-2">
+            <div class="row" >
+                Estadísticas
+            </div>
+            <div class="row" style="font-size: 22px;">
+                <div class="col col-2">
+                    {{pkmn.stats[0].stat.name | titlecase}}:
+                    {{pkmn.stats[0].base_stat}}
+                    <div *ngIf="pkmn.stats[0].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[0].base_stat > 49 && pkmn.stats[0].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[0].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+                <div class="col col-2">
+                    {{pkmn.stats[1].stat.name | titlecase}}:
+                    {{pkmn.stats[1].base_stat}}
+                    <div *ngIf="pkmn.stats[1].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[1].base_stat > 49 && pkmn.stats[1].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[1].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+                <div class="col col-2">
+                    {{pkmn.stats[2].stat.name | titlecase}}:
+                    {{pkmn.stats[2].base_stat}}
+                    <div *ngIf="pkmn.stats[2].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[2].base_stat > 49 && pkmn.stats[2].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[2].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+                <div class="col col-2">
+                    {{pkmn.stats[3].stat.name | titlecase}}:
+                    {{pkmn.stats[3].base_stat}}
+                    <div *ngIf="pkmn.stats[3].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[3].base_stat > 49 && pkmn.stats[3].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[3].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+                <div class="col col-2">
+                    {{pkmn.stats[4].stat.name | titlecase}}:
+                    {{pkmn.stats[4].base_stat}}
+                    <div *ngIf="pkmn.stats[4].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[4].base_stat > 49 && pkmn.stats[4].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[4].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+                <div class="col col-2">
+                    {{pkmn.stats[5].stat.name | titlecase}}:
+                    {{pkmn.stats[5].base_stat}}
+                    <div *ngIf="pkmn.stats[5].base_stat < 50" class="rounded bg-danger"
+                        style="width: 33%; height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[5].base_stat > 49 && pkmn.stats[5].base_stat < 90" class="rounded bg-warning"
+                        style="width: 66%;height: 20px;"></div>
+                    <div *ngIf="pkmn.stats[5].base_stat > 89" class="rounded bg-success"
+                        style="width: 100%; height: 20px;"></div>
+                </div>
+            </div>
+        </div>
+        <div class="col col-1"></div>
+    </div>
+</div>
